@@ -1,3 +1,6 @@
+import static org.junit.Assert.assertTrue
+
 def file = new File(basedir, "build.log")
-return file.text.contains("I haz been run")
+assertTrue file.text.contains("I haz been run from '$basedir'")
+assertTrue file.text.contains("JVM argument(s): -Xverify:none -XX:TieredStopAtLevel=1")
 
